added self closing tags support via semi-colons.

--- a/src/test.html
+++ b/src/test.html
@@ -8,8 +8,7 @@ Rim templating engine
 <body>
 <div>
 WELCOME BATOOCCHII!
-<hr />
-sss
+<hr/>sss
 sass
 </div>
 <img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" />
