--- a/src/test.html
+++ b/src/test.html
@@ -8,9 +8,9 @@ Rim templating engine
 <body>
 <div>
 WELCOME BATOOCCHII!
-<hr/>sss
+<hr/><br/>sss
 sass
 </div>
-<img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" />
+<img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" alt= />
 </body>
 </html>
