Added comments, with comments.js"

--- a/tests/test.html
+++ b/tests/test.html
@@ -8,9 +8,12 @@ Rim templating engine
 <body>
 <div>
 WELCOME BATOOCCHII!
-<hr/><br/>sss
+<hr/>
+<br/>
+sss
 sass
+<!--This is a comment-->
 </div>
-<img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" alt= />
+<img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" alt=WELCOMEBATOOCCHII! />
 </body>
 </html>
