--- a/tests/test.html
+++ b/tests/test.html
@@ -2,18 +2,12 @@
 <html>
 <head>
 <title>
-Rim templating engine
+Hello world
 </title>
 </head>
 <body>
-<div>
-WELCOME BATOOCCHII!
-<hr/>
-<br/>
-sss
-sass
-<!--This is a comment-->
-</div>
-<img src="http://www.sport5.co.il/Sip_Storage/FILES/0/size624x514/720140.jpg" alt=WELCOMEBATOOCCHII! />
+<h1>
+BLANK
+</h1>
 </body>
 </html>
