Added lists rendering and bug fixes"

--- a/tests/test.html
+++ b/tests/test.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>
-Hello world
+Title
 </title>
 </head>
 <body>
 <h1>
-BLANK
+I was imported successfully!
 </h1>
 </body>
 </html>
