Added basic indetation

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>
-Title
-</title>
-</head>
-<body>
-<h1>
-I was imported successfully!
-</h1>
-</body>
+   <head>
+      <title>
+          Title
+      </title>
+   </head>
+   <body>
+      <ul>
+          <li>name</li>
+          <li>age</li>
+      </ul>
+   </body>
 </html>
