Added options to localy assign variables and mixin bug fixes.

--- a/tests/test.html
+++ b/tests/test.html
@@ -6,9 +6,8 @@
       </title>
    </head>
    <body>
-      <ul>
-          <li>name</li>
-          <li>age</li>
-      </ul>
+      <h1 style="color:blue">
+          I am Blue
+      </h1>
    </body>
 </html>
