Improved var handling in strings and added escape character

--- a/tests/test.html
+++ b/tests/test.html
@@ -6,8 +6,8 @@
       </title>
    </head>
    <body>
-      <h1 style="color:blue">
-          I am Blue
+      <h1 style="red">
+          I am @color1@ red
       </h1>
    </body>
 </html>
