Added multipule files import

--- a/tests/test.html
+++ b/tests/test.html
@@ -2,12 +2,15 @@
 <html>
    <head>
       <title>
-          Title
+          Rim templating engine
       </title>
    </head>
    <body>
-      <h1 style="red">
-          I am @color1@ red
+      <h1>
+          What up?
+      </h1>
+      <h1>
+          I am second
       </h1>
    </body>
 </html>
