Added doctype types and bug fixes.

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>
-          Rim templating engine
-      </title>
-   </head>
-   <body>
-      <h1>
-          What up?
-      </h1>
-      <h1>
-          I am second
-      </h1>
-   </body>
+    <head>
+        <title>
+            Rim
+        </title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div>
+            12
+        </div>
+    </body>
 </html>
