Change doctype parsing for better inline rendering and removed vars object from options.

--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Rim
+            Shoko
         </title>
         <link rel="stylesheet" href="style.css" />
     </head>
