--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1 id="header" class="red big">
+        <h1 style="margin: 10rem;" id="header" class="red big">
             What's up, Avi Nimni
         </h1>
     </body>
