Added for in loops.

--- a/test/test.html
+++ b/test/test.html
@@ -6,9 +6,28 @@
         </title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
-        <h1 style="margin: 10rem;" id="header" class="red big">
-            What's up, Avi Nimni
-        </h1>
+    <body style="margin: 0;">
+        <div class="nav-container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li>
+                        <a href="https://github.com/nirkog/shoko">
+Home                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/nirkog/shoko">
+About                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/nirkog/shoko">
+API                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/nirkog/shoko">
+Getting Started                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
