Changed comment char to * and improved for in loops.

--- a/test/test.html
+++ b/test/test.html
@@ -7,27 +7,8 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body style="margin: 0;">
-        <div class="nav-container">
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li>
-                        <a href="https://github.com/nirkog/shoko">
-Home                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nirkog/shoko">
-About                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nirkog/shoko">
-API                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nirkog/shoko">
-Getting Started                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <h2 id="h" class="red header">
+            Hello world
+        </h2>
     </body>
 </html>
