Added hard coded arrays in for in loop and big fix.

--- a/test/test.html
+++ b/test/test.html
@@ -7,8 +7,11 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body style="margin: 0;">
-        <h2 id="h" class="red header">
-            Hello world
-        </h2>
+        <ul>
+            <li>
+key            </li>
+            <li>
+door            </li>
+        </ul>
     </body>
 </html>
