Removed attr.js file

--- a/test/test.html
+++ b/test/test.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-                <link rel="stylesheet" href="style.css" />
+<html>
+    <head>
+        <title>
+            Shoko
+        </title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+    </body>
+</html>
