Added else statments, small bug fixes and changed test

--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,16 @@
             Shoko
         </title>
         <link rel="stylesheet" href="style.css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     </head>
     <body>
+        <div class="alert-container alert-error">
+            Error - invalid email or password!
+            <i class="material-icons cancel-btn">
+                cancel
+            </i>
+        </div>
+        <script src="signin.js">
+        </script>
     </body>
 </html>
