--- a/test/test.html
+++ b/test/test.html
@@ -8,8 +8,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     </head>
     <body>
-        <div class="alert-container alert-error">
-            Error - invalid email or password!
+        <div class="alert-container alert-success">
+            You have successfully signed in!
             <i class="material-icons cancel-btn">
                 cancel
             </i>
