Removed .vscode and modified tests.

--- a/test/test.html
+++ b/test/test.html
@@ -4,17 +4,10 @@
         <title>
             Shoko
         </title>
-        <link rel="stylesheet" href="style.css" />
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     </head>
     <body>
-        <div class="alert-container alert-success">
-            You have successfully signed in!
-            <i class="material-icons cancel-btn">
-                cancel
-            </i>
-        </div>
-        <script src="signin.js">
-        </script>
+        <h1>
+            No Error
+        </h1>
     </body>
 </html>
