Styled index.html

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
         <div class="footer-container">
             <div class="footer">
-                <a href="/">Home</a> - <a href="#">Contact Us</a>
+                <a href="index.html">Home</a> - <a href="#">Contact Us</a>
             </div>
         </div>
     </body>
