small changes to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Shoko is a blazing fast, super simple templating engine">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -205,7 +206,7 @@ html {
             </div>
             <div class="bottom-section">
                 <div class="name">Shoko</div>
-                <div class="copyright">&copy; Nir Kogman 2017-2017</div>
+                <div class="copyright">&copy; Nir Kogman 2017</div>
             </div>
         </footer>
     </body>
