Added some real content to index.html

--- a/index.html
+++ b/index.html
@@ -37,30 +37,31 @@
         <div class="wrapper">
             <div class="features">
                 <div class="feature">
-                    <h5>Easy</h5>
+                    <h5>Easy To Use</h5>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla eget felis diam. Vivamus est tortor, pharetra sollicitudin placerat ac, 
-                        tincidunt sed sapien. In quam dolor, dapibus id massa quis, facilisis gravida est. 
-                        Nunc eget leo in augue varius accumsan nec eget tortor.
+                        Shoko uses curly braces to seperate elements.
+                        This syntax is very easy to grasp and can be learnt very easily.
+                        Shoko also supports many frameworks, including express and hapi.
+                        As easy as it is to write Shoko templates, it is easy to render them on the server.
                     </p>
                 </div>
                 <div class="feature">
                     <h5>Fast</h5>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla eget felis diam. Vivamus est tortor, pharetra sollicitudin placerat ac, 
-                        tincidunt sed sapien. In quam dolor, dapibus id massa quis, facilisis gravida est. 
-                        Nunc eget leo in.
+                        As Shoko is very lightweight(~10Kb), and due to its
+                        efficient design, Shoko is blazing fast. For example,
+                        a document about 50 lines in length takes less than 1ms
+                        to render. This speed makes you worry about one less thing
+                         when you're developing your web app.
                     </p>
                 </div>
                 <div class="feature">
-                    <h5>Something</h5>
+                    <h5>Makes Your Job Easier</h5>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla eget felis diam. Vivamus est tortor, pharetra sollicitudin placerat ac, 
-                        tincidunt sed sapien. In quam dolor, dapibus id massa quis, facilisis gravida est. 
-                        Nunc.
+                        With Shoko's many features, your job becomes much 
+                        faster as well as easier. A document that is 500 lines long in html,
+                        might only be 100 line long in Shoko thanks to mixins, variables, for loops
+                        and many more.
                     </p>
                 </div>
             </div>
