Linked 404.html to skeleton and google fonts

--- a/404.html
+++ b/404.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <link rel="stylesheet" href="styles/404.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
         <title>Page Not Found</title>
     </head>
