--- a/test/test.html
+++ b/test/test.html
@@ -6,8 +6,8 @@
         </title>
     </head>
     <body>
-        <h1>
-            Error
+        <h1 style="color: red;">
+            No if statements
         </h1>
     </body>
 </html>
